ecmascript/parser/tests/test262-error-references/fail/8dc7370bc6dec92b.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/8dc7370bc6dec92b.js:1:6
  |
1 | throw;
  |      ^

